# detective-quest-thiiiagomartins

./: CMakeLists.txt  detective_quest.c  detective_quest.h  utils.c
include/: detective_quest.h  navegacao.h  pistas.h  sala.h  suspeito.h
src/: detective_quest.c  navegacao.c  pistas.c  sala.c  suspeito.c
